@@ -1,3 +1,8 @@
+2009-04-06  Hubert Figuiere  <hub@figuiere.net>
+
+	* libjuicer/sj-metadata-musicbrainz3.c (mb_list_albums): 
+	Make sure release is not NULL. (Close: #575820)
+
 2009-04-06  Ross Burton  <ross@linux.intel.com>
 
 	* libjuicer/sj-metadata.c:
